--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,60 @@
   margin: 0;
 }
 
+@media screen and (max-width: 390px) {
+  .main-program .programs .program {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    max-height: 500px;
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .main-program .program h3 {
+    width: 100%;
+    max-width: 327px;
+    position: relative;
+    text-align: center;
+    color: #ec5242;
+    font-weight: 700;
+    margin: 0 auto;
+  }
+
+  .main-program .program p {
+    width: 100%;
+    max-width: 327px;
+    color: #fff;
+    margin: 0 auto;
+    padding: 5px;
+  }
+
+  .speakers-sec .speakers .speaker {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+  }
+
+  .speakers-sec .speaker .img-profile {
+    width: 100%;
+    max-width: 327px;
+    height: auto;
+    margin: 0 auto;
+  }
+
+  .speakers-sec .speakers .speaker-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 375px;
+    padding: 10px;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+  }
+}
 @media screen and (max-width: 768px) {
   header {
     background: url(../images/mobile_intro_bg.png);
@@ -165,8 +219,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 150px;
+    max-height: 500px;
     gap: 20px;
+    padding: 20px;
     background: #6a6b6d;
     opacity: 0.8;
   }
@@ -341,6 +396,8 @@
     font-weight: 400;
     font-size: 18px;
     background: #fff;
+    width: 100%;
+    max-width: 700px;
     padding-top: 20px;
     text-align: center;
   }
@@ -353,14 +410,14 @@
     color: #272a31;
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    width: 75%;
+    width: 375px;
     line-height: 1.7;
   }
 
   .hero-section-about .venue-highlight .date-stamp {
     font-size: 28px;
     font-weight: 700;
-    text-align: center;
+    width: 375px;
   }
 
   .hero-section-about .venue-highlight .venue {
@@ -381,6 +438,8 @@
     font-family: "Lato", sans-serif;
     font-weight: 400;
     text-align: center;
+    width: 100%;
+    max-width: 700px;
     font-size: 18px;
     background: #fff;
     padding-top: 20px;
@@ -389,6 +448,15 @@
   .about-main p span {
     color: #ec5242;
     font-weight: 600;
+  }
+
+  .highlight {
+    width: 375px;
+  }
+
+  .highlight .img-logo {
+    width: 150px;
+    height: auto;
   }
 
   .about-events h3 {
@@ -416,32 +484,61 @@
     text-align: center;
   }
 
-  .Events {
+  .events {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 
   .event {
     position: relative;
+    width: 500px;
+    max-width: 600px;
+    margin: 0 auto;
   }
 
-  .overlay {
-    position: relative;
-    width: 450px;
-    background-color: #ec5242;
-    z-index: 15;
-    margin-top: 20px;
-    mix-blend-mode: multiply;
-  }
-
-  .event img {
-    width: 400px;
-    height: auto;
-    color: var(--secondary);
+  .event .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: #ec5242;
-    opacity: 0.2;
+    background: rgba(236, 82, 66, 0.5);
+  }
+
+  .event .content p {
+    display: flex;
+    color: #272a31;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    color: #fff;
+    justify-content: center;
+    margin-top: 25%;
   }
 
   /* Partner */
+  .speaker-partner {
+    background: #3e4044;
+    margin: 0 auto;
+    width: 500px;
+    max-width: 700px;
+  }
+
+  .partners {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .partner-title {
+    color: #272a31;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    color: #fff;
+  }
+
   .partner-title .hr-lines {
     width: 100px;
     height: 1px;
@@ -456,7 +553,7 @@
   /* Footer section */
   .footer-logo {
     position: relative;
-    right: 5%;
+    left: 5%;
   }
 
   .footer-logo .img-logo {
@@ -479,9 +576,11 @@
     color: var(--primary);
     font-family: var(--fontFamily);
     display: flex;
+    flex-direction: column;
     padding: 20px;
   }
 }
+/* Desktop version */
 @media screen and (min-width: 768px) {
   .logo {
     border: 2px solid green;
